--- a/Source Frontend/public/index.html
+++ b/Source Frontend/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <title>Blog App</title>
   </head>
   <body>
     <noscript>
@@ -13,6 +14,5 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="https://kit.fontawesome.com/cc23240d6f.js" crossorigin="anonymous"></script>
   </body>
 </html>
