--- a/Source Frontend/public/index.html
+++ b/Source Frontend/public/index.html
@@ -1,18 +1,43 @@
-<!DOCTYPE html>
-<html lang="">
+<!DOCTYPE html> <!-- file này là to nhất -->
+<html lang="" style="background-color: #F2F4F6;"> <!-- #F7FAFC code vào ngay đây thì lại được , vì đây là thằng to nhất -->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <link rel="icon" href="./favicon.ico">
     <title>Blog App</title>
+
+    <!-- màu nền cho cả ứng dụng (cả file App.vue , Admin.vue, User.vue) -->
+    <!-- Tại component con code vào thẻ to nhất cũng chưa đổi màu nền thằng to nhất được -->
+    <!-- code vào các fiile App.vue , Admin.vue, User.vue thì các file component con vẫn chưa đổi màu nền -->
+    <!-- code vào thẻ style trong head này cũng chưa được -->
+    <!-- <style>
+      #app{
+        background-color: red;
+      }
+    </style> -->
+    <!-- <style type="text/css" media="print">
+      @media print {
+        body * :not(#printMe){
+          display:none;
+        }
+
+        body #printMe {
+          display:block;
+        }
+        html {
+          background-color: white;
+        }
+      }
+    </style> -->
+
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app"></div><!-- code vào chính trong thẻ div này vẫn chưa được -->
     <!-- built files will be auto injected -->
+    <script src="https://kit.fontawesome.com/cc23240d6f.js" crossorigin="anonymous"></script>
   </body>
 </html>
